working on nav bar

--- a/amazon.html
+++ b/amazon.html
@@ -9,7 +9,17 @@
 </head>
 <body>
     <nav>
-        <img src="C:\Users\Dell\Desktop\AMAZON CLONE IMG\assets\amazon_logo.png" alt="please wait" width="100px">
+        <a href="file:///C:/Users/Dell/Desktop/AMAZON%20CLONE/AMAZON-CLONE/amazon.html">
+            <img src="C:\Users\Dell\Desktop\AMAZON CLONE IMG\assets\amazon_logo.png" alt="loading" width="100px">
+        </a>
+        <div class="nav-country">
+            <img src="C:\Users\Dell\Desktop\AMAZON CLONE IMG\assets\location_icon_dark.png" alt="loading" height="20px" 
+            style="background-color: rebeccapurple;">
+            <div>
+                <p>Deliver to</p>
+                <h1>INDIA</h1>
+            </div>
+        </div>
     </nav>
 </body>
 </html>
