--- a/amazon.html
+++ b/amazon.html
@@ -20,6 +20,14 @@
                 <h1>INDIA</h1>
             </div>
         </div>
+        <div class="nav-search">
+            <div calss=""nav-search-category>
+                <p style="color: rebeccapurple;">All</p>
+                <img src="C:\Users\Dell\Desktop\AMAZON CLONE IMG\assets\dropdown_icon.png" alt="loading">
+            </div>
+            <input class="nav=-search-category" typle="text" placeholder="search amazon">
+            <img src="C:\Users\Dell\Desktop\AMAZON CLONE IMG\assets\search_icon.png" alt="" class="nav-search-category">
+        </div>
     </nav>
 </body>
 </html>
